[package]
name = "mul"
version = "0.1.0"
authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
description = "Bengali stemmer"
license = "MIT"
keywords = ["bengali", "nlp", "information", "retrieval", "stemming"]
categories = ["text-processing"]
repository = "https://github.com/OpenBangla/mul"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
